--- a/config/config.json
+++ b/config/config.json
@@ -9,14 +9,14 @@
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "snodari",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "snodari",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
